# NBodies

./: CMakeLists.txt  a.out  false  main  main.cpp  main_test  main_test.cpp  maint_test  mpi_demo  nbody.cpp  openmpi_demo.c  scatter  scatter.c
